--- a/langs/fble.revised.txt
+++ b/langs/fble.revised.txt
@@ -72,3 +72,9 @@ type ::= poly
 
 I think that fixes the ambiguity and is still sane.
 
+Note that the type of a function alone is not sufficient to know how to
+properly call the function. You need documentation as to what each of the
+arguments are. The fact that we no longer have argument names in the type
+makes this slightly more difficult in some cases, but presumably even argument
+names are insufficient documentation, so that should be fine.
+
