--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 Fble:
 * [lang] Switch to new concrete syntax for func and poly
+  - remove multi-arg application desugaring in parser.
+  - add type_block and block to concrete syntax.
 
 * [lang] Flesh out spec for new fble.
 
