Change poly kind syntax from <a;b> to <a>b

--- a/langs/fble.new.txt
+++ b/langs/fble.new.txt
@@ -59,7 +59,7 @@ name ::= (* [a-zA-Z--9_]+[@]? *)
 kind ::=
    '*'                  (* basic_kind *)
  | '@'                  (* type_kind *)
- | '[' kind ']' kind    (* poly_kind *)
+ | '<' kind '>' kind    (* poly_kind *)
  ;
 
 type ::= expr ;
